k8s/apps/_retired/annict-profile-card/production/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: annict-profile-card-production
