k8s/apps/_retired/annict-profile-card/production/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`apps.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`apps.starry.blue`) && PathPrefix(`/annict-profile-card`)
      services:
        - name: service
          port: 8080
      middlewares:
        - name: strip-prefix-annict-profile-card

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-annict-profile-card

spec:
  stripPrefix:
    prefixes:
      - /annict-profile-card
